# flask_htmx_test

./: .gitignore  app.py  fast_app.py  pyproject.toml
deployment/nginx-sites/: fast_app.conf
