[tool.poetry]
name = "flask-htmx-test"
version = "0.1.0"
description = ""
authors = ["beret <beret@hipisi.org.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "*"
python-fasthtml = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
